// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileIcon Component should match snapshot with custom container styles 1`] = `
<View
  accessibilityLabel="ProfileIconOuter"
  accessible={true}
  style={
    {
      "position": "relative",
    }
  }
>
  <View
    accessibilityLabel="ProfileIconInner"
    accessible={true}
    style={
      {
        "backgroundColor": "blue",
        "borderRadius": 10,
        "padding": 5,
      }
    }
  >
    <View
      accessibilityLabel="ProfileIcon"
      accessible={true}
      color="#A5A5A5"
      name="person"
      size={40}
    />
  </View>
</View>
`;

exports[`ProfileIcon Component should match snapshot with custom icon size 1`] = `
<View
  accessibilityLabel="ProfileIconOuter"
  accessible={true}
  style={
    {
      "position": "relative",
    }
  }
>
  <View
    accessibilityLabel="ProfileIconInner"
    accessible={true}
    style={{}}
  >
    <View
      accessibilityLabel="ProfileIcon"
      accessible={true}
      color="#A5A5A5"
      name="person"
      size={60}
    />
  </View>
</View>
`;

exports[`ProfileIcon Component should match snapshot with pinned icon 1`] = `
<View
  accessibilityLabel="ProfileIconOuter"
  accessible={true}
  style={
    {
      "position": "relative",
    }
  }
>
  <View
    accessibilityLabel="ProfileIconInner"
    accessible={true}
    style={{}}
  >
    <View
      accessibilityLabel="ProfileIcon"
      accessible={true}
      color="#A5A5A5"
      name="person"
      size={40}
    />
  </View>
  <View
    testID="mockPinIcon"
  />
</View>
`;

exports[`ProfileIcon Component should match snapshot without pinned icon 1`] = `
<View
  accessibilityLabel="ProfileIconOuter"
  accessible={true}
  style={
    {
      "position": "relative",
    }
  }
>
  <View
    accessibilityLabel="ProfileIconInner"
    accessible={true}
    style={{}}
  >
    <View
      accessibilityLabel="ProfileIcon"
      accessible={true}
      color="#A5A5A5"
      name="person"
      size={40}
    />
  </View>
</View>
`;
